cmake_minimum_required(VERSION 3.8)
project(rover)
if(WIN32)
  execute_process(COMMAND cmd /c "CALL ${CMAKE_CURRENT_LIST_DIR}/setup.bat")
endif()
include_directories(./Include)
set(CMAKE_LIBRARY_FLAGS "")
if(MSVC)
  set(CMAKE_LIBRARY_FLAGS "/LTCG")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /WX /bigobj /std:c++17 /Wv:18")
  set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /GL")
  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SAFESEH:NO")
  set(CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE} /LTCG")
  add_definitions(-D_CRT_SECURE_NO_DEPRECATE)
  add_definitions(-DNOMINMAX)
  add_definitions(-D_SCL_SECURE_NO_WARNINGS)
  add_definitions(-D_WIN32_WINNT=0x0501)
  add_definitions(-DWIN32_LEAN_AND_MEAN)
  add_definitions(/experimental:external)
  add_definitions(/external:W0)
  add_definitions(/external:anglebrackets)
  include_directories(./Dependencies/dlib-19.17/Install/include)
  set(DLIB_LIB_DEBUG "${CMAKE_CURRENT_LIST_DIR}/Dependencies/dlib-19.17/Install/lib/dlib19.17.0_debug_32bit_msvc1916.lib")
  set(DLIB_LIB_OPTIMIZED "${CMAKE_CURRENT_LIST_DIR}/Dependencies/dlib-19.17/Install/lib/dlib19.17.0_release_32bit_msvc1916.lib")
else()
  include_directories(./Dependencies/dlib-19.17/Install/Release/include)
  set(DLIB_LIB_DEBUG "${CMAKE_CURRENT_LIST_DIR}/Dependencies/dlib-19.17/Install/Debug/lib/libdlib.a")
  set(DLIB_LIB_OPTIMIZED "${CMAKE_CURRENT_LIST_DIR}/Dependencies/dlib-19.17/Install/Release/lib/libdlib.a")
endif()
if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX OR
    ${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
  set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_RELEASE} -O3 -DNDEBUG")
endif()
if(${CMAKE_SYSTEM_NAME} STREQUAL "SunOS")
  set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_RELEASE} -pthreads")
endif()
file(GLOB rover_header_files ./Include/Rover/*.hpp)
source_group("Rover" FILES ${rover_header_files})
file(GLOB header_files ${rover_header_files})
if(MSVC)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP")
endif()
add_library(rover ${header_files})
set_source_files_properties(${header_files} PROPERTIES HEADER_FILE_ONLY TRUE)
set_target_properties(rover PROPERTIES STATIC_LIBRARY_FLAGS_RELEASE
  "${CMAKE_LIBRARY_FLAGS}" LINKER_LANGUAGE CXX OUTPUT_NAME rover)
add_subdirectory(Python)
add_subdirectory(Tests)
