if(WIN32)
  execute_process(COMMAND where python.exe OUTPUT_VARIABLE PYTHON_PATH
    OUTPUT_STRIP_TRAILING_WHITESPACE)
  set(PYTHON_INCLUDE_PATH "${PYTHON_PATH}/../include")
  set(PYTHON_LIBRARY_PATH "${PYTHON_PATH}/../libs/python37.lib")
endif()
include_directories(./Include)
include_directories(./../Dependencies/pybind11-2.2.4/include)
include_directories(${PYTHON_INCLUDE_PATH})
file(GLOB header_files ./Include/*.hpp)
file(GLOB source_files ./Source/*.cpp)
add_library(python SHARED ${header_files} ${source_files})
set_source_files_properties(${header_files} PROPERTIES HEADER_FILE_ONLY TRUE)
set_target_properties(python PROPERTIES OUTPUT_NAME rover)
if(MSVC)
  set_target_properties(python PROPERTIES SUFFIX ".pyd" LINK_FLAGS /SAFESEH:NO
    LINK_FLAGS_RELEASE /LTCG)
endif()
if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX OR
    ${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fvisibility=hidden")
endif()
if(UNIX)
  set_target_properties(python PROPERTIES PREFIX "")
  include_directories(/usr/include/python3.6)
endif()
target_link_libraries(python ${PYTHON_LIBRARY_PATH})
